--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,9 @@
 
     </LinearLayout>
 
+    <Button
+        android:layout_width="match_parent"
+        android:onClick="showInter"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
