--- a/myadslib/src/main/res/layout/my_inter_ads.xml
+++ b/myadslib/src/main/res/layout/my_inter_ads.xml
@@ -10,7 +10,8 @@
         android:id="@+id/appIcon"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/adText"
