--- a/myadslib/src/main/res/layout/my_inter_ads.xml
+++ b/myadslib/src/main/res/layout/my_inter_ads.xml
@@ -16,9 +16,10 @@
     <TextView
         android:id="@+id/adText"
         android:layout_width="wrap_content"
+        android:textAlignment="center"
         android:layout_height="wrap_content"
         android:text="Sleepy Addiction Controller"
-        android:textColor="#595959"
+        android:textColor="#212121"
         android:textSize="16sp" />
 
 </LinearLayout>
