--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
 
     <Button
         android:layout_width="match_parent"
+        android:text="Show Inter"
         android:onClick="showInter"
         android:layout_height="wrap_content" />
 
